Updated the README.md
Corrected the HTML link to the images of the Business Card Web

--- a/src/Business Card/index.html
+++ b/src/Business Card/index.html
@@ -47,7 +47,7 @@ is not documented at all. And might be a mess to understand it.
       </section>
       <section id="profile-pic">
         <img
-          src="/Business Card/img/profile-pic.png"
+          src="/src/Business Card/img/profile-pic.png"
           alt="main-profile-pic"
           class="main-img"
         />
