Changes to the main page

--- a/src/Wrapped Green/index.html
+++ b/src/Wrapped Green/index.html
@@ -65,7 +65,7 @@
         <img
           src="/src/Wrapped Green/imgs/vegetable_table@2x.png"
           alt="vegetable table pic"
-          width="100%"
+          width="650px"
         />
       </div>
       <div class="about-us__text-container">
@@ -83,15 +83,16 @@
       <div class="menu__title-text">
         <span>Menu</span>
         <span>Explore Our Best Food</span>
-        <span>below you can see our best selling meals!</span>
+        <span>Below you can see our best selling meals!</span>
       </div>
       <div class="menu__items-container">
         <div class="menu__items">
           <img
             src="/src/Wrapped Green/imgs/menu_photo1@2x.png"
             alt="menu photo 1"
+            width="100%"
           />
-          <div>
+          <div class="menu__items-text">
             <div>
               <span>Mighty burger</span>
               <span>Served with fries and drink</span>
@@ -105,8 +106,9 @@
           <img
             src="/src/Wrapped Green/imgs/menu_photo2@2x.png"
             alt="menu photo 2"
+            width="100%"
           />
-          <div>
+          <div class="menu__items-text">
             <div>
               <span>Chickpae's salad</span>
               <span>Served with fries and drink</span>
@@ -120,8 +122,9 @@
           <img
             src="/src/Wrapped Green/imgs/menu_photo_3@2x.png"
             alt="menu photo 3"
+            width="100%"
           />
-          <div>
+          <div class="menu__items-text">
             <div>
               <span>Chickpae's wrap</span>
               <span>Served with fries and drink</span>
@@ -133,54 +136,66 @@
         </div>
       </div>
       <div class="menu__title-text">
-        <span>Good food = happy clients</span>
+        <div class="second-menu-title">Good food = happy clients</div>
       </div>
       <div class="menu__img-container">
         <img
           src="/src/Wrapped Green/imgs/galery_photo1@2x.png"
           alt="gallery photo 1"
+          width="100%"
         />
         <img
           src="/src/Wrapped Green/imgs/galery_photo2@2x.png"
           alt="gallery photo 2"
+          width="100%"
         />
         <img
           src="/src/Wrapped Green/imgs/galery_photo3@2x.png"
           alt="gallery photo 3"
+          width="100%"
         />
         <img
           src="/src/Wrapped Green/imgs/galery_photo4@2x.png"
           alt="gallery photo 4"
+          width="100%"
         />
         <img
           src="/src/Wrapped Green/imgs/galery_photo5@2x.png"
           alt="gallery photo 5"
+          width="100%"
         />
         <img
           src="/src/Wrapped Green/imgs/galery_photo6@2x.png"
           alt="gallery photo 6"
+          width="100%"
         />
       </div>
       <div class="menu__schedule">
         <div class="menu__schedule-item">
-          <img src="/src/Wrapped Green/imgs/time_icon@2x.png" alt="time icon" />
-          <span>Today 12pm - 9pm</span>
+          <img
+            src="/src/Wrapped Green/imgs/time_icon@2x.png"
+            alt="time icon"
+            width="40px"
+          />
+          <span class="bold-text">Today 12pm - 9pm</span>
           <span>Working Hours</span>
         </div>
         <div class="menu__schedule-item">
           <img
             src="/src/Wrapped Green/imgs/localization_icon@2x.png"
             alt="localization icon"
+            width="40px"
           />
-          <span>Piastowska 4, Cracow</span>
+          <span class="bold-text">Piastowska 4, Cracow</span>
           <span>Find Us</span>
         </div>
         <div class="menu__schedule-item">
           <img
             src="/src/Wrapped Green/imgs/phone_icon@2x.png"
             alt="phone icon"
+            width="40px"
           />
-          <span>503 204 176</span>
+          <span class="bold-text">503 204 176</span>
           <span>Call Us</span>
         </div>
       </div>
@@ -190,6 +205,7 @@
         <img
           src="/src/Wrapped Green/imgs/wrapped_green_logo2@2x.png"
           alt="wrapped green logo 2"
+          width="180px"
         />
       </div>
       <div class="footer__menu-links">
