Changes on structure and styles of the site.
Added link to the material icons.
Added Menu button for mobile.
Added Mobile styles.
Fixed bug on the z-index of some elements.

--- a/src/Wrapped Green/index.html
+++ b/src/Wrapped Green/index.html
@@ -13,6 +13,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/src/Wrapped Green/styles/moblie.css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <path
@@ -39,6 +44,12 @@
         </div>
         <div class="nav-menu-container__contact nav-margin">
           <a class="menu-links" href="#">Contact</a>
+        </div>
+        <div
+          class="nav-menu-container__menu-icon nav-margin"
+          style="display: none"
+        >
+          <span class="material-icons"> menu </span>
         </div>
       </div>
     </nav>
