--- a/src/Wrapped Green/index.html
+++ b/src/Wrapped Green/index.html
@@ -49,7 +49,17 @@
           class="nav-menu-container__menu-icon nav-margin"
           style="display: none"
         >
-          <span class="material-icons"> menu </span>
+          <span
+            id="mobile-menu-btn"
+            class="nav-menu-container__menu-icon material-icons"
+          >
+            menu
+          </span>
+          <div id="mobile-menu">
+            <div><span>Home</span></div>
+            <div><span>Menu</span></div>
+            <div><span>Contact</span></div>
+          </div>
         </div>
       </div>
     </nav>
@@ -239,5 +249,6 @@
         />
       </div>
     </section>
+    <script src="/src/Wrapped Green/js/script.js"></script>
   </body>
 </html>
